# virtual-contributor-engine-openai-assistant

./: .dockerignore  .env.default  Dockerfile  README.md  ai_adapter.py  config.py  docker-compose.yaml  logger.py  main.py  models.py  pyproject.toml  utils.py
.github/ISSUE_TEMPLATE/: bug_report.md  epic.md  feature_request.md  user_story.md
.github/workflows/: build-deploy-k8s-dev-azure.yml  build-deploy-k8s-dev-hetzner.yml  build-deploy-k8s-sandbox-azure.yml  build-deploy-k8s-sandbox-hetzner.yml  build-deploy-k8s-test-azure.yml  build-deploy-k8s-test-hetzner.yml  build-release-docker-hub.yml
manifests/: 25-virtual-contributor-engine-openai-assistant-deployment-dev.yml
