[tool.poetry]
name = "virtual-contributor-engine-openai-assistant"
version = "0.1.1"
description = "Alkemio's OpenAI assistant engine"
authors = ["Alkemio BV <info@alkem.io>"]
license = "EUPL-1.2"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
openai = "1.45.1"
load-dotenv = "^0.1.0"
async-timeout = "^4.0.3"
aio-pika = "^9.3.1"
aiormq = "^6.7.7"
alkemio-virtual-contributor-engine = {git = "https://git@github.com/alkem-io/virtual-contributor-engine.git", rev = "v0.0.2"}

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

